[package]
name = "powder-plot"
version = "1.0.2"
edition = "2021"
authors = ["Joshua Arulsamy <joshua.gf.arul@gmail.com>"]
description = "Automate plotting x-ray powder diffraction data."

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
opener = "0.8.3"
rust_xlsxwriter = "0.91.0"
tinyfiledialogs = "3.3"

[build-dependencies]
winresource = "0.1.27"

[[bin]]
name = "Plot"
path = "src/main.rs"
